@@ -26,6 +26,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+-------------------- 2.5.11 Stable Release 26-April-2013] ------------------
+
 26-Apr-2013 Mark Dexter
  # [#30681] Error in Database tab in Extension Manager. Thanks Amirol Ahmad.
  # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
